# zpg

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile
include/: ShaderLoader.h  application.h  camera.h  drawable_object.h  keyboard_handler.h  mouse_handler.h  observable.h  observer.h  plain.h  scene.h  shader.h  shape.h  sky_box.h  sky_box_texture.h  sphere.h  suzi_flat.h  suzi_smooth.h  texture.h  transform.h
include/light/: directional_light.h  light.h  point_light.h  spotlight.h
include/material/: material.h
include/models/: model.h  model_factory.h
include/models/vertices/: cube.h  plain.h  square.h  triangle.h  uv_plain.h
include/scenes/: scene.h  scene_4_spheres.h  scene_forest.h  scene_solar_system.h  scene_test_3.h  scene_week_9.h  scene_week_9_night.h
include/transformation/: bezier.h  placeable.h  rotation.h  scale.h  transformation_component.h  transformation_composite.h  translation.h
resources/shaders/: blinn.frag  color.frag  constant.frag  lambert.frag  phong.frag  skybox.frag  skybox.vert  vertex.vert
src/: application.cpp  camera.cpp  drawable_object.cpp  keyboard_handler.cpp  main.cpp  mouse_handler.cpp  scene.cpp  shader.cpp  shape.cpp  sky_box.cpp  sky_box_texture.cpp  texture.cpp  transform.cpp
src/light/: directional_light.cpp  light.cpp  point_light.cpp  spotlight.cpp
src/material/: material.cpp
src/models/: model.cpp  model_factory.cpp
src/scenes/: scene.cpp  scene_4_spheres.cpp  scene_forest.cpp  scene_solar_system.cpp  scene_test_3.cpp  scene_week_9.cpp  scene_week_9_night.cpp
src/transformation/: bezier.cpp  placeable.cpp  rotation.cpp  scale.cpp  transform.cpp  transformation_component.cpp  transformation_composite.cpp  translation.cpp
